# sigra-service

./: Cargo.toml
examples/: api_usage.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/repo/: documents.rs  envelopes.rs  mod.rs
src/routes/: documents.rs  envelopes.rs  health.rs  mod.rs  signing.rs  verify.rs
src/services/: anchoring.rs  mod.rs  verification.rs
tests/: health_test.rs
